--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@svgr/cli": "^8.1.0",
@@ -24,6 +27,8 @@
     "cookies-next": "^4.2.1",
     "deepmerge": "^4.3.1",
     "envalid": "^8.0.0",
+    "framer-motion": "^11.5.6",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.8",
     "react": "^18",
@@ -45,5 +50,6 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
