--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "mymedhub-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "ui:add": "npx shadcn@latest add",
-    "svg:convert": "npx @svgr/cli --icon --typescript --ignore-existing --memo --out-dir ./src/components/Icons -- public/icons"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@svgr/cli": "^8.1.0",
-    "@tanstack/react-query": "^5.54.1",
-    "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "cookies-next": "^4.2.1",
-    "date-fns": "^3.0.0",
-    "deepmerge": "^4.3.1",
-    "envalid": "^8.0.0",
-    "framer-motion": "^11.5.6",
-    "input-otp": "^1.2.4",
-    "lucide-react": "^0.438.0",
-    "next": "^15.0.3",
-    "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "shadcn-ui": "^0.9.3",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.9.1",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "postcss": "^8.4.45",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
-  },
-  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
+	"name": "mymedhub-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"ui:add": "npx shadcn@latest add",
+		"svg:convert": "npx @svgr/cli --icon --typescript --ignore-existing --memo --out-dir ./src/components/Icons -- public/icons"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@svgr/cli": "^8.1.0",
+		"@tanstack/react-query": "^5.54.1",
+		"axios": "^1.7.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
+		"cookies-next": "^4.2.1",
+		"country-region-data": "^3.1.0",
+		"date-fns": "^3.0.0",
+		"deepmerge": "^4.3.1",
+		"envalid": "^8.0.0",
+		"framer-motion": "^11.5.6",
+		"input-otp": "^1.2.4",
+		"lucide-react": "^0.438.0",
+		"next": "^15.0.3",
+		"react": "^18.3.1",
+		"react-day-picker": "8.10.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.0",
+		"react-phone-number-input": "^3.4.10",
+		"shadcn-ui": "^0.9.3",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8",
+		"zustand": "^4.5.5"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.7",
+		"@types/node": "^22.5.4",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^9.9.1",
+		"eslint-plugin-jsx-a11y": "^6.10.0",
+		"postcss": "^8.4.45",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.10",
+		"typescript": "^5.5.4"
+	},
+	"packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
