--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
 	"diffEditor.codeLens": true,
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
-	"editor.formatOnType": true,
+	"editor.tabSize": 2,
+	"editor.wordWrap": "off",
+	"editor.formatOnType": true
 }
