--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.438.0",
 		"next": "^15.0.3",
+		"next-auth": "^5.0.0-beta.25",
 		"react": "^18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18.3.1",
