--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-toast": "^1.2.2",
 		"@svgr/cli": "^8.1.0",
 		"@tanstack/react-query": "^5.54.1",
+		"@types/js-cookie": "^3.0.6",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -38,6 +39,7 @@
 		"envalid": "^8.0.0",
 		"framer-motion": "^11.5.6",
 		"input-otp": "^1.2.4",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.438.0",
 		"next": "^15.0.3",
 		"next-auth": "^5.0.0-beta.25",
